# knots

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notes.txt
gl-util/: gl-common.h  glfw-util.cpp  glfw-util.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  vertex-array.cpp
sim/: phys.cpp  render.cpp  scene.h
util/: debug.cpp  debug.h  mat.cpp  mat.h  quat.h  sparse.h  stopwatch.cpp  stopwatch.h  util.h  vec.h
vr/: ovr-util.h
